CSS styling for our navbar so it would be fixed about the videoPlayer using a z-index, journal

--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -127,3 +127,13 @@ video {
   background-color: rgba(0,0,0,.2);
   /* background-color: #000000cc; */
 }
+
+.navbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: blue;
+  z-index: 1;
+}
